plugins/groovy/testdata/highlighting/pre30/elvisAssignment.groovy
a <error descr="Elvis assignment is not supported in current version">?=</error> b